<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="go about"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="247dp" />

    <Button
        android:id="@+id/toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="toast"
        tools:layout_editor_absoluteX="164dp"
        android:textAllCaps="false"
        tools:layout_editor_absoluteY="247dp" />

    <RelativeLayout android:id="@+id/activity_main"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="数字1"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/num2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/num1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:hint="数字2"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/num2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:elevation="0dp"
            android:text="计算" />

        <TextView
            android:id="@+id/sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calculate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="结果" />

        <Button
            android:id="@+id/go_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sum"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:text="WebView" />

        <Button
            android:id="@+id/go_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/go_web"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:text="RecycleView" />
    </RelativeLayout>

    <TextView
        android:id="@+id/list_result"
        android:layout_width="match_parent"
        tools:text="11"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>